Fix scrollbar thumb

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,7 @@
 }
 
 ::-webkit-scrollbar {
+  height: 0.4rem;
   width: 0.4rem;
 }
 
